syntax = "proto3";

package v2;

import "api/v2/common.proto";
import "api/v2/compliance_common.proto";
import "api/v2/search_query.proto";
import weak "google/api/annotations.proto";

option go_package = "./api/v2;v2";
option java_package = "io.stackrox.proto.api.v2";

// Next Tag: 11
message ComplianceProfile {
  string id = 1;
  string name = 2;
  string profile_version = 3;
  string product_type = 4;
  string standard = 5;
  string description = 6;
  repeated ComplianceRule rules = 7;
  string product = 8;
  string title = 9;
  repeated string values = 10;
}

// Next Tag: 7
message ComplianceProfileSummary {
  string name = 1;
  string product_type = 2;
  string description = 3;
  string title = 4;
  int32 rule_count = 5;
  string profile_version = 6;
}

// ListComplianceProfilesResponse provides a list of profiles
message ListComplianceProfilesResponse {
  repeated ComplianceProfile profiles = 1;
}

// ListComplianceProfileSummaryResponse provides a list of profiles summaries
message ListComplianceProfileSummaryResponse {
  repeated ComplianceProfileSummary profiles = 1;
}

// CountComplianceProfilesResponse gives count of compliance profiles
message CountComplianceProfilesResponse {
  int32 count = 1;
}

message ProfilesForClusterRequest {
  string cluster_id = 1;
}

message ClustersProfileSummaryRequest {
  repeated string cluster_ids = 1;
}

service ComplianceProfileService {
  // GetComplianceProfile retrieves the specified compliance profile
  rpc GetComplianceProfile(ResourceByID) returns (ComplianceProfile) {
    option (google.api.http) = {get: "/v2/compliance/profile/{id}"};
  }

  // ListComplianceProfiles returns profiles matching given request
  rpc ListComplianceProfiles(ProfilesForClusterRequest) returns (ListComplianceProfilesResponse) {
    option (google.api.http) = {get: "/v2/compliance/profiles/cluster"};
  }

  // ListProfileSummaries returns profiles matching each cluster and the given query
  rpc ListProfileSummaries(ClustersProfileSummaryRequest) returns (ListComplianceProfileSummaryResponse) {
    option (google.api.http) = {get: "/v2/compliance/profiles/summary"};
  }

  // GetComplianceProfileCount returns the number of profiles matching the given query
  rpc GetComplianceProfileCount(RawQuery) returns (CountComplianceProfilesResponse) {
    option (google.api.http) = {get: "/v2/compliance/profiles/count"};
  }
}
